--- a/index.new.html
+++ b/index.new.html
@@ -1733,53 +1733,127 @@
         <hr id="v11">
         <div class="version">
             <h2>V11</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 29/07/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/53"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"
+                    #53</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11/index.html" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
                     source-code</a>
             </h3>
             <ul>
                 <li>
-                    <strong class="added">added</strong>
+                    <strong class="added"> added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        </ll>
+                        <li>brand new project home page and card ui design</li>
+                        <li>brand new blog home page and card ui design</li>
+                        <li>new about me page design</li>
+                        <li>v10 to /old foler</li>
+                        <li>brand new changelog.md file and links to view it on footer</li>
+                        <li>brand new card for changelog.md file on projects.html </li>
                     </ul>
-                <li>
-                    <strong class="fixed">fixed:</strong>
+                    <strong class="removed">removed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>some about me text</li>
                     </ul>
+                    <strong class="fixed"> fixed</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>images white space on small screens</li>
+                        <li>plus other code fixes </li>
+                    </ul>
+                    <strong class="amended"> amended </strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>main.css and blog. css combined into one file</li>
+                        <li>website now uses scss with a compiled css file</li>
+                        <li>project card thumbnails</li>
+                        <li>mobile experience on about.html and index.html</li>
+                        <li>github and social links as I have changed my github username</li>
+                        <li>plus other code changes</li>
+
                 </li>
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
-                        onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                        #100</a></h3>
+            </ul>
+            <h3 class="h3_header"> rc 4</h3>
+            <h3> 29/07/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/52" class="a_link"
+                    onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                    #52</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>v10 code to /old folder</li>
+                <li>a changelog card and link on project.html for hannahcodes.co.uk</li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>image white space on blog page while viewing on small screens</li>
+                <li>plus other code fixes</li>
             </ul>
             </ul>
             </li>
             <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+            <h3> 28/07/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/51" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #100</a></h3>
+                    #51</a></h3>
+            <strong class="added">added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new changelog file</li>
+                <li>new link on footer to changelog file</li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>mobile experience on about.html and index.html</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>link text on blog posts</li>
             </ul>
             </ul>
             </li>
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+            <h3 class="h3_header"> rc 2</h3>
+            <h3> 28/07/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/50" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #100</a></h3>
+                    #50</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new project card img thumb preview</li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>about.html page</li>
+                <li>plus other fixes</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>website now uses scss with a compiled css - file</li>
+                <li>blog.css and main.css have been compined into one file</li>
+                <li>github and social links as I have changed my github username</li>
+                <li>plus other changes</li>
+            </ul>
+            <strong class="issues_rc1"> please note: </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li class="known_li">new about page experence is still not mobile friendly
+                    will hopefully be fix in the next rc build</li>
             </ul>
             </ul>
             </li>
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+            <h3 class="h3_header"> rc 1</h3>
+            <h3> 19/07/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/49" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #100</a></h3>
+                    #49</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>brand new blog page ui</li>
+                <li>brand new about page ui</li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some code issues</li>
+            </ul>
+            <strong class="issues_rc1"> please note: </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li class="known_li">new about page experence is not mobile friendly will
+                    hopefully be fix in the next rc build</li>
             </ul>
             </ul>
-            </li>t-style-type: disc; padding-left: 20px;"
+            </li>
             </ul>
         </div>
         <hr id="v10.2">
