fixed some spacing issues and added v11.1

--- a/index.new.html
+++ b/index.new.html
@@ -1681,52 +1681,160 @@
         <hr id="v11.1">
         <div class="version">
             <h2>V11.1</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 13/08/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/58"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"
+                    #58</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.1/index.html" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.1"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
                     source-code</a>
             </h3>
             <ul>
                 <li>
-                    <strong class="added">added</strong>
+                    <strong class="added"> added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new blog post design with renamed div classes</li>
+                        <li>new links added to nav bar and new dropdown menu added </li>
+                        <li>new blog post 5 (my trip to london)</li>
+                        <li>new thumbnail preview image project cards (from hc-v11.jpg to
+                            hc-v11.1.jpg)</li>
+                        <li>v11 to /old folder</li>
+                        <li>new project card on projects.html for v11 code</li>
                         </ll>
                     </ul>
                 <li>
-                    <strong class="fixed">fixed:</strong>
+                    <strong class="removed">removed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>old blog post code</li>
+                        <li>some js files that aren't being used anymore</li>
+                        </ll>
+                    </ul>
+                <li>
+                    <strong class="fixed"> fixed</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>nav bar not displaying on blog post page when viewing from small screens
+                        </li>
+                        <li>some comments in main.css file</li>
+                        <li>some links on blog posts</li>
+                        <li>hover link text on terms.html</li>
+                        </ll>
+                    </ul>
+                <li>
+                    <strong class="amended"> amended </strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blog posts now display images not just show text</li>
+                        <li>blog post 3's thumbnail image preview</li>
+                        <li>main.css file with footer links now using a custom var property</li>
+                        <li>links on terms.html</li>
+                        <li>hannahcodes blogs thumbnail preview on projects.html</li>
                     </ul>
                 </li>
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+                <h3 class="h3_header"> rc 4</h3>
+                <h3> 13/08/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/57" class="a_link"
                         onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                        #100</a></h3>
-            </ul>
+                        #57</a></h3>
+                <strong class="added"> added</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>v11 to /old folder</li>
+                    <li>new project card on projects.html for v11 code</li>
+                </ul>
+                <strong class="fixed"> fixed</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>some links on blog posts</li>
+                    <li>hover link text on terms.html</li>
+                </ul>
+                <strong class="amended"> amended </strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>links on terms.html</li>
+                    <li>hannahcodes blogs thumbnail preview on projects.html</li>
+                </ul>
             </ul>
             </li>
             <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+            <h3> 12/08/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/56" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #100</a></h3>
+                    #56</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>thumbnail preview image for project cards (from hc-v11.jpg to
+                    hc-v11.1.jpg)</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>link to hannahvlogs</li>
+                <li>main.css file with footer links now using a custom var property</li>
             </ul>
             </ul>
             </li>
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+            <h3 class="h3_header"> rc 2</h3>
+            <h3> 11/08/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/55" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #100</a></h3>
+                    #55</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new thumbnail for blog post 3 now on index.html blog section</li>
+            </ul>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>/vlogs folder as hannah's vlogs will have its own repository </li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some comments in main.css file</li>
+                <li>merge conflict isues that messed up footer on the last rc build of v11.1
+                </li>
+            </ul>
+            <strong class="issues_rc1">please note:</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li class="known_li">links to new vlog page repo will be updated in next rc
+                    build</li>
             </ul>
             </ul>
             </li>
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
+            <h3 class="h3_header"> rc 1</h3>
+            <h3> 10/08/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/54" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #100</a></h3>
+                    #54</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new blog post design</li>
+                <li>brand new page for an upcoming vlog channel I am working on</li>
+                <li>new links added to nav bar and new dropdown menu added</li>
+                <li>new blog post 5 (<a
+                        href="https://blog.hannahcodes.co.uk/post/22/08/10_08_22_my_trip_to_London.html">my
+                        trip to london</a>) </li>
+                </ll>
             </ul>
-            </ul>
+            <li>
+                <strong class="removed">removed</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>some html and css that was from the old blog post deisgn that is no
+                        longer used</li>
+                    <li>some js files that arent being used anymore</li>
+                    </ll>
+                </ul>
+            <li>
+                <strong class="fixed"> fixed</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>nav bar not displaying on blog post page when viewing from small screens
+                    </li>
+                    </ll>
+                </ul>
+            <li>
+                <strong class="amended"> amended </strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>blog posts now display images not just show text</li>
+                    <li>some blog page's code to make it easier to understand</li>
+                    <li>blog post 3's thumbnail image preview</li>
+                    </ll>
+                </ul>
+            <li>
+                <strong class="issues_rc1">please note:</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li class="known_li">the new vlog page is still a work in progress so may
+                        have a lot of changes</li>
+                </ul>
+                </ul>
             </li>
             </ul>
         </div>
@@ -1751,16 +1859,22 @@
                         <li>v10 to /old foler</li>
                         <li>brand new changelog.md file and links to view it on footer</li>
                         <li>brand new card for changelog.md file on projects.html </li>
+                        </ll>
                     </ul>
+                <li>
                     <strong class="removed">removed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>some about me text</li>
+                        </ll>
                     </ul>
+                <li>
                     <strong class="fixed"> fixed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>images white space on small screens</li>
                         <li>plus other code fixes </li>
+                        </ll>
                     </ul>
+                <li>
                     <strong class="amended"> amended </strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>main.css and blog. css combined into one file</li>
@@ -1770,7 +1884,9 @@
                         <li>github and social links as I have changed my github username</li>
                         <li>plus other code changes</li>
 
-                </li>
+                        </ll>
+                    </ul>
+                <li>
             </ul>
             <h3 class="h3_header"> rc 4</h3>
             <h3> 29/07/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/52" class="a_link"
@@ -1780,6 +1896,7 @@
             <ul style="list-style-type: disc; padding-left: 20px;">
                 <li>v10 code to /old folder</li>
                 <li>a changelog card and link on project.html for hannahcodes.co.uk</li>
+                </ll>
             </ul>
             <strong class="fixed"> fixed</strong>
             <ul style="list-style-type: disc; padding-left: 20px;">
@@ -1872,13 +1989,16 @@
                     <strong class="added"> added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>new blog post</li>
+                        </ll>
                     </ul>
+                <li>
                     <strong class="amended"> amended </strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>index blog section on index.html</li>
                         <li>some other blog code</li>
-                </li>
-            </ul>
+                        </ll>
+                    </ul>
+                <li>
             </ul>
             <h3 class="h3_header"> rc 2</h3>
             <h3> 30/06/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/47" class="a_link"
@@ -1922,11 +2042,15 @@
                     <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>new recent post experience</li>
+                        </ll>
                     </ul>
+                <li>
                     <strong class="fixed">fixed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>some code issues</li>
+                        </ll>
                     </ul>
+                <li>
                     <strong class="amended">amended</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
                         <li>blog pages no longer uses bootstrap</li>
