added v11.1.1 and v11.1.2 to index.new.html and removed from current index.html

--- a/index.new.html
+++ b/index.new.html
@@ -1619,30 +1619,30 @@
         <hr id="v11.1.2">
         <div class="version">
             <h2>V11.1.2</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 14/08/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/62"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"
+                    #62</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.1.2/index.html" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.1.2"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
                     source-code</a>
             </h3>
             <ul>
                 <li>
-                    <strong class="added">added</strong>
+                    <strong class="removed">removed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blank spacing between footer and sections</li>
                         </ll>
                     </ul>
                 <li>
-                    <strong class="fixed">fixed:</strong>
+                    <h3 class="h3_header"> rc 1</h3>
+                    <h3> 14/08/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/61" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #61</a></h3>
+                    <strong class="removed">removed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blank spacing between footer and sections</li>
                     </ul>
-                </li>
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
-                        onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                        #100</a></h3>
-            </ul>
             </ul>
             </li>
             </ul>
@@ -1650,30 +1650,29 @@
         <hr id="v11.1.1">
         <div class="version">
             <h2>V11.1.1</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 13/08/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/60"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                    #41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"
+                    #60</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.1.1/index.html" class="a_link"
                     onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'"> website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.1.1"
                     class="a_link" onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
                     source-code</a>
             </h3>
             <ul>
                 <li>
-                    <strong class="added">added</strong>
+                    <strong class="fixed"> fixed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
-                        </ll>
+                        <li>blog post links on index.html</li>
                     </ul>
                 <li>
-                    <strong class="fixed">fixed:</strong>
+                    <h3 class="h3_header"> rc 1</h3>
+                    <h3> 13/08/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/59" class="a_link"
+                            onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
+                            #59</a></h3>
+                    <strong class="fixed"> fixed</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>blog post links on index.html</li>
                     </ul>
-                </li>
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link"
-                        onmouseover="this.style.color='#bb86fc'" onmouseout="this.style.color='#b8b5b58e'">
-                        #100</a></h3>
-            </ul>
             </ul>
             </li>
             </ul>
