updated date when last updated

--- a/index.new.html
+++ b/index.new.html
@@ -15,7 +15,7 @@
 <body>
     <h1>hannahcodes.co.uk Changelog</h1>
 
-    <p> updated 28/02/2025</p>
+    <p> Last updated 29/02/2025</p>
     <div class="sidebar">
         <h2 style="text-align: center;">latet version</h2>
         <button class="accordion">Version 13.1 <span class="icon">⬇️</span></button>
