changed all further dev links to dispay the commit id instead of just #dev 1, #dev2 etc

--- a/index.new.html
+++ b/index.new.html
@@ -452,9 +452,9 @@
                 <h3 class="h3_header"> Dev 1</h3>
                 <h3 class="version_date"> 18/08/23<a
                         href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/727402afa9bbf69540e9990f7ed11d6458568132"
-                        class="a_link" onmouseover="this.style.color='#bb86fc'"
+                        class="a_link_dev" onmouseover="this.style.color='#bb86fc'"
                         onmouseout="this.style.color='#b8b5b58e'">
-                        #Dev1</a></h3>
+                        #727402afa9bbf69540e9990f7ed11d6458568132</a></h3>
                 <strong class="added"> added </strong>
                 <ul style="list-style-type: disc; padding-left: 20px;">
                     <li> new project card on modal for hannahcodes.co.uk (v13)</li>
