updated github.svg file name

--- a/index.new.html
+++ b/index.new.html
@@ -404,7 +404,7 @@
         <div class="version">
             <h2>V13.1</h2>
             <h3 class="version_date"> 18/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/103"
-                    class="a_link">
+                    class="a_link"><img src="https://assets.hannahcodes.co.uk/images/logo/github-light.svg">
                     #103</a> <a href="https://hannahcodes.co.uk/index.html" class="a_link"> website</a>
                 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/tree/main/" class="a_link">
                     source-code</a>
@@ -432,7 +432,7 @@
                 <div class="link-img-wrapper">
                     <h3 class="version_date"> 18/08/23<a
                             href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/102" class="a_link"><img
-                                src="https://assets.hannahcodes.co.uk/images/logo/github_white.svg">
+                                src="https://assets.hannahcodes.co.uk/images/logo/github-light.svg">
                             #102</a>
                 </div>
                 </h3>
@@ -455,7 +455,7 @@
 
                     <h3 class="version_date"> 18/08/23<a
                             href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/727402afa9bbf69540e9990f7ed11d6458568132"
-                            class="a_link_dev"><img src="https://assets.hannahcodes.co.uk/images/logo/github_white.svg">
+                            class="a_link_dev"><img src="https://assets.hannahcodes.co.uk/images/logo/github-light.svg">
                             #...6458568132</a>
                 </div>
                 </h3>
