testing new website and source code svg img on links

--- a/index.html
+++ b/index.html
@@ -1766,13 +1766,10 @@
                                     </div>
                                     <hr class="div_hr_3">
                                     <h2 class="h2_2"> dev 4 </h2>
-                                    <p>24/08/22</p>
-                                    <a class="header_date_a"
-                                        href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/0b0242c20d113be2290e1a31745244f4e4d32e0f">#dev4</a>
+                 .new                   <p>24/08/22</p>
+                                    <a class="header_date_a" href="">#dev4</a>
                                     <div class="div_3">
-                                        <strong class="amended"> amended </strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>about text on index and about.html</li>
+
                                         </ul style="list-style-type: disc; padding-left: 20px;">
                                     </div>
                                     <hr class="div_hr_3">
@@ -1781,63 +1778,30 @@
                                     <a class="header_date_a"
                                         href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/63">#63</a>
                                     <div class="div_3">
-                                        <strong class="added"> added</strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>links to brand new changelog.html file</li>
-                                        </ul style="list-style-type: disc; padding-left: 20px;">
-                                        <strong class="removed">removed</strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>changelog.md file which has been moved to it own repository</li>
-                                        </ul style="list-style-type: disc; padding-left: 20px;">
-                                        <strong class="amended"> amended </strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>index.html blog section which now displays blog 6 and blog 5 preview
-                                                cards</li>
-                                            <li>changelog img thumbnail preview on the project card</li>
-                                            <li>changelog svg icon on the changelog project card</li>
                                         </ul style="list-style-type: disc; padding-left: 20px;">
                                     </div>
                                     <hr class="div_hr_3">
                                     <h2 class="h2_2"> dev 3 </h2>
                                     <p>18/08/22</p>
-                                    <a class="header_date_a"
-                                        href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/a80ca2f80f34e05cb0dc0ced6af97891a83289d8">#dev3</a>
+                                    <a class="header_date_a" href="">#dev3</a>
                                     <div class="div_3">
-                                        <strong class="amended"> amended </strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>changelog img thumbnail preview on the project card</li>
-                                            <li>changelog svg icon on the changelog project card</li>
+
                                         </ul style="list-style-type: disc; padding-left: 20px;">
                                     </div>
                                     <hr class="div_hr_3">
                                     <h2 class="h2_2"> dev 2 </h2>
                                     <p>18/08/22</p>
-                                    <a class="header_date_a"
-                                        href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/0a0e6c50198b4d1b36f900ab6cbfe4177d6ff414">#dev2</a>
+                                    <a class="header_date_a" href="">#dev2</a>
                                     <div class="div_3">
-                                        <strong class="added"> added</strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>new updated link to changelog page</li>
-                                            <li>new changelog img thumbnail preview on project card</li>
-                                        </ul style="list-style-type: disc; padding-left: 20px;">
-                                        <strong class="amended"> amended </strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>index.html blog section to display blog 6 and blog 5 preview cards</li>
+
                                         </ul style="list-style-type: disc; padding-left: 20px;">
                                     </div>
                                     <hr class="div_hr_3">
                                     <h2 class="h2_2"> dev 1 </h2>
                                     <p>14/08/22</p>
-                                    <a class="header_date_a"
-                                        href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/ 36eb87371c4a53a877f066a9d6f0e04e16f90df9">#dev1</a>
+                                    <a class="header_date_a" href="">#dev1</a>
                                     <div class="div_3">
-                                        <strong class="added"> added</strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>new blog post</li>
-                                        </ul style="list-style-type: disc; padding-left: 20px;">
-                                        <strong class="amended"> amended </strong>
-                                        <ul style="list-style-type: disc; padding-left: 20px;">
-                                            <li>links to changelog file as its now viewable in a new repo</li>
+
                                         </ul style="list-style-type: disc; padding-left: 20px;">
                                     </div>
                                 </div>
