--- a/index.new.html
+++ b/index.new.html
@@ -405,8 +405,10 @@
             <h2>V13.1</h2>
             <h3 class="version_date"> 18/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/103"
                     class="a_link"><img src="https://assets.hannahcodes.co.uk/images/logo/github-light.svg">
-                    #103</a> <a href="https://hannahcodes.co.uk/index.html" class="a_link"> website</a>
-                <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/tree/main/" class="a_link">
+                    #103</a> <a href="https://hannahcodes.co.uk/index.html" class="a_link"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg"> website</a>
+                <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/tree/main/" class="a_link"><img
+                        src="https://assets.hannahcodes.co.uk/images/logo/code-light.svg">
                     source-code</a>
             </h3>
 
